# TechFlow

./: .gitignore  LogicalBrutalism.md  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
TechFlow/: asgi.py  settings.py  urls.py  wsgi.py
tickets/: forms.py  models.py  tests.py  urls.py  views.py
tickets/migrations/: 0001_initial.py  0002_alter_employee_position.py  0003_normalize_employee_position.py
tickets/templates/: 403.html  base.html  department_create.html  employee_create.html  employee_update.html  ticket_create.html  ticket_detail.html  ticket_list.html  ticket_update.html
tickets/templates/partials/: ticket_list_content.html
tickets/templates/registration/: login.html  register.html
