[project]
name = "techflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.4",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.12",
    "ruff>=0.15.11",
    "whitenoise>=6.12.0",
]
